# dkernel

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmark/: benchmark_sparse_attn.py
dkernel/: __init__.py  interface.py  utils.py
dkernel/ops/: __init__.py  sparse_attn_bwd.py  sparse_attn_fwd.py  sparse_attn_inference.py
profiling/: profile_sparse_attn.py
s2attn/: __init__.py  interface.py
s2attn/ops/: __init__.py  sparse_attn_bwd.py  sparse_attn_fwd.py
tests/: test_flexattn.py  test_seq_partition.py  test_spare_attn.py  test_sparse_attn.py  test_utils.py
