[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dkernel"
version = "0.0.2"
authors = [
    {name = "Xihui Lin", email = "ericxihuilin@outlook.com"},
    {name = "Yunan Zhang", email = "eric.zhang.uiuc@gmail.com"}
]
readme = "README.md"
dependencies = [
  "fire",
  "triton",
]

[tool.setuptools.packages.find]
include = ["dkernel*"]